--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,16 @@ cmake_minimum_required(VERSION 3.14)
 
 project (WANN LANGUAGES C CXX)
 
-
 set(CMAKE_CXX_STANDARD 17)
 # set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Finding the pz package
 find_package(NeoPZ REQUIRED HINTS ../NeoPZ_install ../neopz_install)
+
+# Mac OS X specific code
+if (APPLE)
+  add_definitions(-DMACOSX)
+endif()
 
 # Making pz "seeable" in Xcode
 # ----------------
@@ -20,8 +24,10 @@ file(GLOB_RECURSE PZ_SRC
 add_custom_target( GlobalFiles SOURCES ${PZ_SRC})
 # ----------------
 
-add_subdirectory(3d-well)
+add_library(WANN_lib SHARED "")
+target_link_libraries(WANN_lib PUBLIC NeoPZ::pz)
+target_include_directories(WANN_lib PUBLIC ${PZ_INCLUDE_DIRS})
+set_target_properties(WANN_lib PROPERTIES LINKER_LANGUAGE CXX)
 
-# creating the projects
-add_executable(wann wann.cpp)
-target_link_libraries(wann PUBLIC NeoPZ::pz)
+add_subdirectory(src)
+add_subdirectory(targets)
