feat: target wann3d working with the lib.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 # let us create a config file with the directory containing the input files
 set(INPUTSDIR ${PROJECT_SOURCE_DIR}/input)
-set(CONFIG_H "${CMAKE_CURRENT_SOURCE_DIR}/input_config.h")
-configure_file ("${CMAKE_CURRENT_SOURCE_DIR}/input_config.h.in" ${CONFIG_H})
+set(TRAININGSDIR ${PROJECT_SOURCE_DIR}/training)
+set(MESHESDIR ${PROJECT_SOURCE_DIR}/geo)
+set(CONFIG_H "${CMAKE_CURRENT_SOURCE_DIR}/dirs_config.h")
+configure_file ("${CMAKE_CURRENT_SOURCE_DIR}/dirs_config.h.in" ${CONFIG_H})
 
 target_include_directories(WANN_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
