feat: added a test to debug hdiv space with hanging nodes

--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -3,3 +3,6 @@ target_link_libraries(wann3d PRIVATE WANN_lib)
 
 add_executable(oldwann3d old-wann3d.cpp)
 target_link_libraries(oldwann3d PRIVATE WANN_lib)
+
+add_executable(hanging-nodes-test hanging-nodes-test.cpp)
+target_link_libraries(hanging-nodes-test PRIVATE WANN_lib)
