--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable(wann3d wann3d.cpp)
 target_link_libraries(wann3d PRIVATE WANN_lib)
 
+add_executable(wann3dRef wann3dRef.cpp)
+target_link_libraries(wann3dRef PRIVATE WANN_lib)
+
 add_executable(oldwann3d old-wann3d.cpp)
 target_link_libraries(oldwann3d PRIVATE WANN_lib)
 
