feat: testing target test-nonlinear-1d with the NonlinearWell material

--- a/targets/CMakeLists.txt
+++ b/targets/CMakeLists.txt
@@ -16,5 +16,8 @@ target_link_libraries(test-divide PRIVATE WANN_lib)
 add_executable(test-sideOrient-1d test-sideOrient-1d.cpp)
 target_link_libraries(test-sideOrient-1d PRIVATE WANN_lib)
 
-add_executable(test-nonlinear test-nonlinear.cpp)
-target_link_libraries(test-nonlinear PRIVATE WANN_lib)
+add_executable(test-nonlinear-3d test-nonlinear-3d.cpp)
+target_link_libraries(test-nonlinear-3d PRIVATE WANN_lib)
+
+add_executable(test-nonlinear-1d test-nonlinear-1d.cpp)
+target_link_libraries(test-nonlinear-1d PRIVATE WANN_lib)
